# festers

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy.yml  release.yml
data/: schedule.json
deploy/: FIRST-DEPLOY.md  README.md  docker-compose.yml  festers.caddy  festers.env.example  run.sh  update.sh
deploy/systemd/: festers-update.service  festers-update.timer
docs/: contracts.md  deploy.md  design.md  reconciliation.md  schedule-source.md  travel.md  venues.md
festers/: __init__.py  accounts.py  app.py  conflicts.py  festivals.py  notify.py  optimiser.py  params.py  schedule.py  travel.py  wants.py
festers/static/: style.css
festers/templates/: _agenda.html  _workspace.html  base.html  browse.html  conflicts.html  index.html  link_invalid.html  plan.html  sent.html
ooda/: README.md
ooda/loop-01-schedule-data/: README.md
ooda/loop-02-service-and-picker/: README.md
ooda/loop-03-conflict-view/: README.md
ooda/loop-04-travel-model/: README.md
ooda/loop-05-optimiser-core/: README.md
ooda/loop-06-converge/: README.md
scripts/: deploy.sh  migrate_v2.py
tests/: conftest.py  test_accounts.py  test_app.py  test_conflicts.py  test_converge.py  test_festivals.py  test_notify.py  test_optimiser.py  test_params.py  test_schedule.py  test_travel.py  test_wants.py
